Istio/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: apache-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache-deployment
  template:
    metadata:
      labels:
        app: apache-deployment
    spec:
      containers: 
        - name: apache
          image: httpd:2.4
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            name: apache-port
          volumeMounts:
          - mountPath: /usr/local/apache2/htdocs/
            name: apache-volume
      volumes:
        - name: apache-volume
          persistentVolumeClaim:
            claimName: my-pvc
---

apiVersion: v1
kind: Service
metadata: 
  name: apache-service
spec:
  type: NodePort
  selector:
    app : apache-deployment
  ports:
    - protocol: TCP 
      port : 80
      targetPort: apache-port
      nodePort: 30001
