Istio/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations: 
    kubernetes.io/change-cause : "change mount type to pvc with storage class"
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - name: nginx
          image: nginx-test:2
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            name: nginx-port
          volumeMounts: 
            - name: nginx-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name:  nginx-volume
          persistentVolumeClaim: 
            claimName: my-pvc-with-sc
---

apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
spec:
  type: NodePort
  selector:
    app : nginx-deployment
  ports:
    - protocol: TCP 
      port : 80
      targetPort: nginx-port
      nodePort: 30000
